refactor: remove group concept from codebase in favor of solving problems with tags only
